--- a/src-modules/org/opencms/gwt/client/ui/css/selectArea.css
+++ b/src-modules/org/opencms/gwt/client/ui/css/selectArea.css
@@ -26,7 +26,7 @@
 .marker{
 	position:absolute;
 }
-.overlay{
+div.overlay{
 	position: absolute;
 	/** Don't use a constant here. */
 	background: #000000;
